// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link tests is a basic snapshot 1`] = `
<a
  aria-disabled="false"
  class="underline text-blue-700 hover:text-blue-800 active:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:no-underline transition-colors duration-150  "
  href="/"
>
  test link
</a>
`;

exports[`Link tests is a snapshot with isDisabled set to true 1`] = `
<a
  aria-disabled="false"
  class="underline text-blue-700 hover:text-blue-800 active:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:no-underline transition-colors duration-150 opacity-disabled cursor-not-allowed "
  href="/"
>
  test link
</a>
`;

exports[`Link tests is a snapshot with isExternal equal to true 1`] = `
<a
  aria-disabled="false"
  class="underline text-blue-700 hover:text-blue-800 active:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:no-underline transition-colors duration-150  "
  href="/"
  rel="noopener noreferrer"
>
  test link
</a>
`;
